datasets/dataset_txt/certbot/certbot_887.txt
Contributor
jsha commented on 28 Nov 2017
https://travis-ci.org/certbot/certbot/jobs/308555880#L5878-L5888
Collecting PyYAML==3.12 (from -c /home/travis/build/certbot/certbot/tools/pip_constraints.txt (line 47))
  Using cached PyYAML-3.12.tar.gz
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):
      File "<string>", line 1, in <module>
      File "/tmp/pip-build-2AB6Cr/PyYAML/setup.py", line 83, in <module>
        from wheel.bdist_wheel import bdist_wheel
      File "/home/travis/build/certbot/certbot/.tox/py26/lib/python2.6/site-packages/wheel/bdist_wheel.py", line 407
        ignore=lambda x, y: {'PKG-INFO', 'requires.txt', 'SOURCES.txt',
                                       ^
    SyntaxError: invalid syntax